--- a/src/main/resources/manager.fxml
+++ b/src/main/resources/manager.fxml
@@ -13,14 +13,18 @@
         <TextField fx:id="firstname" editable="true" focusTraversable="false" promptText="Имя"/>
         <TextField fx:id="middlename" editable="true" focusTraversable="false" promptText="Отчество"/>
 
-<!--        <Button maxWidth="100" onAction="#btnGET" text="Найти" HBox.hgrow="ALWAYS"/>-->
+        <Label text=""/>
+        <Label text=" Управление клиентом"/>
         <Button maxWidth="100" onAction="#btnGETList" text="Найти" HBox.hgrow="ALWAYS"/>
         <Button maxWidth="100" onAction="#btnPOST" text="Добавить" HBox.hgrow="ALWAYS"/>
         <Button maxWidth="100" onAction="#btnPUT" text="Редактировать" HBox.hgrow="ALWAYS"/>
         <Button maxWidth="100" onAction="#btnDELETE" text="Удалить" HBox.hgrow="ALWAYS"/>
-        <Button maxWidth="110" onAction="#btnConfirmVisit" text="Отметить посещение" HBox.hgrow="ALWAYS"/>
-        <Button maxWidth="110" onAction="#btnViewVisits" text="Отобразить посещаемость" HBox.hgrow="ALWAYS"/>
-        <Button maxWidth="110" onAction="#btnCalculateMembershipCard" text="Расчитать абонемент" HBox.hgrow="ALWAYS"/>
+
+        <Label text=""/>
+        <Label text=" Управление датами посещения "/>
+        <Button maxWidth="170" onAction="#btnConfirmVisit" text="Отметить посещение" HBox.hgrow="ALWAYS"/>
+        <Button maxWidth="170" onAction="#btnViewVisits" text="Отобразить посещаемость" HBox.hgrow="ALWAYS"/>
+        <Button maxWidth="170" onAction="#btnCalculateMembershipCard" text="Расчитать абонемент" HBox.hgrow="ALWAYS"/>
     </VBox>
 
 
@@ -37,24 +41,10 @@
     </VBox>
 
     <VBox>
-        <VBox>
-            <Text>"Ниже отображается Json responce"</Text>
-            <TextField fx:id="result" editable="false" focusTraversable="false"/>
-        </VBox>
-        <VBox>
-            <Text>"Ниже отображается id клиента"</Text>
-            <TextField fx:id="clientId" editable="false" focusTraversable="false"/>
-        </VBox>
-        <VBox>
-            <Text>"Ниже отображается выделенный элемент кода"</Text>
-            <TextField fx:id="testField" editable="false" focusTraversable="false"/>
-        </VBox>
-    </VBox>
-    <VBox>
         <Label fx:id="lbl_visit"/>
         <TableView fx:id="table_attendance" >
             <columns>
-                <TableColumn fx:id="col_dates" prefWidth="80.0" text="Дата посещения"/>
+                <TableColumn fx:id="col_dates" prefWidth="80.0" text="Даты посещения"/>
             </columns>
         </TableView>
     </VBox>
